--- a/src/main/resources/templates/country/delete.html
+++ b/src/main/resources/templates/country/delete.html
@@ -7,9 +7,9 @@
 <body>
     <h1>Country 削除</h1>
     <p>削除する国のコードを指定してください。</p>
-    <form method="post" action="/country/delete">
-        <input type="text" name="code" th:value="${code}">
-        <button type="submit">送信</button>
+    <form method="post" action="/country/delete" th:object="${country}">
+        <input type="text" name="code" th:value="*{code}">
+        <button type="submit">送信</button><a th:href="@{/country/list}">一覧に戻る</a>
     </form>
 </body>
 </html>
